--- a/views/sequence.erb
+++ b/views/sequence.erb
@@ -8,14 +8,14 @@
 		
 
 
-		<div id="" class="sixteen columns">
+		<div id="" class="twelve columns">
 			<img src="/images/mac.png" alt="">
-			<div id="" class=" dave  offset-by-twelve">			
+		</div>
+		<div id="" class=" dave four columns">			
 				<h3 class="highlight ">HELLO THERE.</h3>
 				<p class="">THIS IS A PARAGRAPH GIVING FURTHER DETAIL.</p>
 				<a class="button radius">SIGN UP</a>
-			</div><!-- / -->
-		</div>
+		</div><!-- / -->
 
 	</li>
 
