--- a/views/sequence.erb
+++ b/views/sequence.erb
@@ -6,14 +6,15 @@
 	
 	<li >
 		
-
-
 		<div id="" class="twelve columns">
 			<img src="/images/mac.png" alt="">
 		</div>
-		<div id="" class=" dave four columns">			
-				<h3 class="highlight ">HELLO THERE.</h3>
-				<p class="">THIS IS A PARAGRAPH GIVING FURTHER DETAIL.</p>
+		
+		<div id="" class="dave four columns">			
+				<h3 class="highlight">HELLO THERE.</h3>
+					<hr>
+				<p>THIS IS A PARAGRAPH GIVING FURTHER DETAIL.</p>
+					<hr>
 				<a class="button radius">SIGN UP</a>
 		</div><!-- / -->
 
