--- a/views/sequence.erb
+++ b/views/sequence.erb
@@ -1,29 +1,27 @@
 <hr class="sixteen columns">
 
+<div id="sequence" class="row">
+			
 
-
-<ul id="sequence" class="row">
-	
-	<li >
-		
-		<div id="" class="twelve columns">
+<ul class="sequence">
+			    
+	<li class="row seq-frame">
+		<div id="" class="twelve columns seq-img">
 			<img src="/images/mac.png" alt="">
-		</div>
-		
-		<div id="" class="dave four columns">			
+		</div>	
+		<div id="" class="dave four columns seq-text">			
 				<h3 class="highlight">HELLO THERE.</h3>
 					<hr>
 				<p>THIS IS A PARAGRAPH GIVING FURTHER DETAIL.</p>
 					<hr>
 				<a class="button radius">SIGN UP</a>
 		</div><!-- / -->
-
 	</li>
 
-</ul><!-- / -->
 
 
 
 
-<br class="clear" />
+</ul>
 
+</div><!-- /end slider -->
